kubernetes/apps/kube-system/cilium/gateway/external.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${D_HS}"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.42.130"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: "external.${D_HS}"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${D_HS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-production-tls
    - name: https-hca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_HCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-production-tls
    - name: https-igi
      protocol: HTTPS
      port: 443
      hostname: "*.${D_IGI}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_IGI//./-}-production-tls
    - name: https-sn
      protocol: HTTPS
      port: 443
      hostname: "*.${D_SN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_SN//./-}-production-tls
    - name: https-taca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_TACA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_TACA//./-}-production-tls
    - name: https-tan
      protocol: HTTPS
      port: 443
      hostname: "*.${D_TAN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_TAN//./-}-production-tls
    - name: https-lmvca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_LMVCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-production-tls
